# rendering

./: .gitignore
path_tracing/: CMakeLists.txt  CMakePresets.json  README.md
path_tracing/source/: BVH.cpp  BVH.h  Util.cpp  Util.h  main.cpp
path_tracing/source/Core/: Assert.h
path_tracing/source/Image/: Image.cpp  Image.h
path_tracing/source/Math/: Aabb.h  Axis.h  Color.h  Intersect.h  Math.h  Numbers.h  Ray.h  Tri.h  Vector.h
